tests/ui/static_program_placeholder.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for static variables
 --> tests/ui/static_program_placeholder.rs:3:28
  |
3 | static PROGRAM: g::Program<_> =
  |                            ^ not allowed in type signatures
  |
help: replace this with a fully-specified type
  |
3 - static PROGRAM: g::Program<_> =
3 + static PROGRAM: Program<hibana::g::Send<0, 1, Msg<7, u16>>> =
  |
